--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
   </head>
   <body>
 
-
+    <header class="container fixed-top">
+        <!-- Menúgi  -->
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand d-flex align-items-center gap-2 text-white" href="#"><img src="./assets/img/viajes.svg" alt="logo viajes" width="30px">  Viajes Chile</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active text-white" aria-current="page" href="#inicio" style="font-weight: 300;">Inicio</a>
+                  <a class="nav-link text-white" href="#quienes-somos" style="font-weight: 300;">Quienes Somos</a>
+                  <a class="nav-link text-white" href="#destacados" style="font-weight: 300;">Destacados</a>
+                  <a class="nav-link text-white" href="#contacto" style="font-weight: 300;">Contacto</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+  
+    </header>
 
 
 
