--- a/index.html
+++ b/index.html
@@ -36,6 +36,31 @@
   
     </header>
 
+    <!-- Carrusel -->
+    <section class="banner" id="inicio">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+              <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="paisaje llamas">
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="isla de pascua">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="pingüino">
+            </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+
 
 
 
