--- a/index.html
+++ b/index.html
@@ -61,6 +61,30 @@
         </div>
     </section>
 
+    <!-- Quienes Somos -->
+    <section class="presentacion" style="background-color: #000000;">
+        <div class="container">
+          <h3 class="titulo text-center pt-5 pb-3" style="color: white;" id="quienes-somos">¿QUIÉNES SOMOS?</h3>
+          <hr style="color: white;">
+          <div class="row pt-5">
+            <div class="col-xs-12 col-md-6 col-lg-4 d-flex flex-column parrafo">
+              <div class="icono"><i class="fa-solid fa-plane fa-2x d-flex justify-content-center p-1"></i></div>
+              <p class="pt-2" style="color: white;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</p>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4 d-flex flex-column parrafo">
+              <p class="pb-2" style="color: white;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</p>
+              <div class="icono"><i class="fa-solid fa-mountain fa-2x d-flex justify-content-center p-1"></i></div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4 d-flex flex-column">
+              <div class="icono"><i class="fa-solid fa-route fa-2x d-flex justify-content-center p-1"></i></div>
+              <p class="pt-2" style="color: white;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</p>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    
+
 
 
 
