--- a/index.html
+++ b/index.html
@@ -83,7 +83,51 @@
         </div>
     </section>
 
-    
+    <!-- Destacados -->
+    <section class="destacados" style="background-color: #000000;" id="destacados">
+        <div class="container pb-5">
+          <h3 class="titulo text-center pb-3" style="color: white; padding-top: 80px;">DESTACADOS</h3>
+          <hr style="color: white;">
+          <div class="row g-4 mx-auto pt-3">
+            <div class="col-xs-12 col-md-6 col-lg-3 tarjeta">
+              <div class="card h-100" style="background-color: #0DCAF0;">
+                <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" style="height: 150px" alt="paisaje sur de Chile">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-3 tarjeta">
+              <div class="card h-100" style="background-color: #0DCAF0;">
+                <img src="./assets/img/card2.jpg" class="card-img-top img-fluid" style="height: 150px" alt="Laguna del Maule">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a short card.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-3 tarjeta">
+              <div class="card h-100" style="background-color: #0DCAF0;">
+                <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" style="height: 150px" alt="paisaje norte de Chile">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-3 tarjeta">
+              <div class="card h-100" style="background-color: #0DCAF0;">
+                <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" style="height: 150px" alt="paisaje sur de Chile">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
 
 
 
