--- a/index.html
+++ b/index.html
@@ -129,7 +129,49 @@
         </div>
     </section>
 
-
+    <!-- Contacto -->
+    <section class="contacto" style="background-color: #000000;" id="contacto">
+        <div class="container pb-5">
+            <h3 class="titulo text-center pb-3" style="color: white; padding-top: 80px;">CONTACTO</h3>
+            <hr style="color: white;">
+  
+            <form>
+              <div class="mb-3">
+                <label for="nombre" class="form-label" style="color: white;">Nombre</label>
+                <input type="text" class="form-control" id="examplenombre">
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputasunto" class="form-label" style="color: white;">Asunto</label>
+                <input type="text" class="form-control" id="exampleInputasunto">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label" style="color: white;">Mensaje</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary enviar">Enviar</button>
+            </form>
+  
+        </div>
+    </section>
+  
+    <!-- Footer -->
+    <footer style="background-color: #0DCAF0;">
+        <div class="container pt-4 pb-3 text-center">
+          <div class="row">
+            <h4 class="col" style="color: white;">VIAJES CHILE</h4>
+            <div class="rrss col">
+              <button type="button" class="btn btn-secondary p-1" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Github" style="border: none; background-color: transparent;"><a href="https://github.com/"><i class="fa-brands fa-github fa-2x" style="color: white;"></i></a>
+              </button>
+              <button type="button" class="btn btn-secondary p-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Linkedin" style="border: none; background-color: transparent;"><a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin fa-2x" style="color: white;"></i></a>
+              </button>
+              <button type="button" class="btn btn-secondary p-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Twitter" style="border: none; background-color: transparent;"><a href="https://twitter.com"><i class="fa-brands fa-square-twitter fa-2x" style="color: white;"></i></a>
+              </button>
+              <button type="button" class="btn btn-secondary p-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Facebook" style="border: none; background-color: transparent;"><a href="https://www.facebook.com"><i class="fa-brands fa-square-facebook fa-2x" style="color: white;"></i></a>
+              </button>
+          </div>
+          </div>
+        </div>
+    </footer>
 
 
     <!-- Bokotstrap -->
